# Material3-QWidget

./: .gitignore  CMakeLists.txt  COPYING  README.md  checks.json
docs/: README.md  package.json  pnpm-lock.yaml
docs/app/: app.css  root.tsx
docs/app/locales/: locale_EN_US.ts  locale_ZH_CN.ts  translator.ts
docs/app/main_window/: main_window.css  main_window.tsx
docs/app/routes/: home.tsx
docs/app/welcome/: welcome.tsx
docs/plain text/en_US/: README.md
docs/plain text/en_US/quick start/: COPYING.md  Welcome.md
docs/plain text/zh_CN/: README.md
docs/plain text/zh_CN/快速上手/: 欢迎.md  许可.md
docs/readme/: README.en.md  README.zh.md
docs/site/: README.md  index.html  package-lock.json  package.json
docs/site/src/: main.tsx
docs/site/src/components/navigation/: Navigation.scss  Navigation.tsx
docs/site/src/locales/: locale_EN_US.ts  locale_ZH_CN.ts  translator.ts
docs/site/src/pages/copying/: Copying.scss  Copying.tsx
docs/site/src/pages/welcome/: Welcome.scss  Welcome.tsx
examples/: CMakeLists.txt
examples/main/: main.cc
examples/main_window/: mainwindow.cc  mainwindow.h
includes/components/app_bar/: app_bar.h
includes/components/buttons/: icon_buttons.h
includes/font_loader/: font_loader.h
includes/interfaces/: color_palette.h
includes/theme_loader/: default_palette.h  theme_conf.h  theme_loader.h
includes/utils/: utils.h
res/: resources.qrc
res/fonts/material-symbols/: README.md
res/palette_ref/: M3.json
scripts/: gen_include_headers.sh
src/: CMakeLists.txt
src/components/app_bar/: app_bar.cc  app_bar.h  app_bar_icon_btn.cc  app_bar_icon_btn.h
src/components/buttons/: icon_buttons.cc  icon_buttons.h
src/font_loader/: font_loader.cc
src/interfaces/: color_palette.h
src/theme_loader/: default_palette.h  theme_conf.h  theme_loader.cc  theme_loader.h
src/utils/: icon_variant.h  utils.cc  utils.h
